fix(style): removed scrollbars from header

--- a/src/app/styles/nav.sass
+++ b/src/app/styles/nav.sass
@@ -96,7 +96,6 @@
 
     &.user-item
       margin-top: 7px
-      margin-right: -10px
       height: 40px
       display: inline-flex
       align-items: center
@@ -135,7 +134,7 @@
       width: 30px
       height: 30px
       border-radius: 50%
-      margin-right: 30px
+      margin-right: 10px
       background: $grey-light
 
     .ion-chevron-down
